# RL-Pick-and-Place

./: .gitignore  README.md  section2.1
section2.1 DH convention/: ee_fk_matrix.py  workspace.py
section2.2 IK Solver/: Untitled 1.ods  s2.2.py
section2.3 IS solver/: is solver (Copy) old  is solver (main).py  is solver test.py  is solver_test.py
section2.4 RL picking/abb/: find_min_torque_orientation.py  torque_results.csv
section2.4 RL picking/abb/abb_irb1600_6_12_moveit_config/: CMakeLists.txt
section2.4 RL picking/abb/abb_irb1600_6_12_moveit_config/launch/: irb1600_gazebo.launch.py
section2.4 RL picking/abb/abb_irb1600_gazebo/: CMakeLists.txt
section2.4 RL picking/abb/abb_irb1600_gazebo/config/: ros2_controllers.yaml  rviz_config.rviz
section2.4 RL picking/abb/abb_irb1600_gazebo/launch/: abb_irb1600_gazebo.launch.py
section2.4 RL picking/abb/abb_irb1600_gazebo/scripts/: arm_gripper_loop_controller.py
section2.4 RL picking/abb/abb_irb1600_gazebo/urdf/: abb_irb1600_6_12_ros2_control.urdf.xacro
section2.4 RL picking/abb/abb_irb1600_gazebo/worlds/: empty.world
section2.4 RL picking/abb/abb_irb1600_support/: CMakeLists.txt  package.xml
section2.4 RL picking/abb/abb_irb1600_support/launch/: robot_state_visualize_irb1600_10_145.launch
section2.4 RL picking/abb/abb_irb1600_support/urdf/: irb1600_6_12_colored.urdf
section2.4 RL picking/abb/abb_resources/urdf/: gazebo_colors.xacro
section2.4 RL picking/abb/section2.4/: load_simulator_node.py  td3_simple.py  torque_compensation_node.py
section2.4 RL placing/abb/: README.md  start_robot.py
section2.4 RL placing/abb/abb_irb1600_6_12_moveit_config/: package.xml
section2.4 RL placing/abb/abb_irb1600_6_12_moveit_config/launch/: irb1600_rviz.launch.py  irb1600_simulation.launch.py
section2.4 RL placing/abb/abb_irb1600_6_12_moveit_config/rviz/: moveit.rviz
section2.4 RL placing/abb/abb_irb1600_control/: CMakeLists.txt  package.xml  setup.cfg  setup.py
section2.4 RL placing/abb/abb_irb1600_control/abb_irb1600_control/: motion_planner.py
section2.4 RL placing/abb/abb_irb1600_control/launch/: sac_gazebo_control.launch.py
section2.4 RL placing/abb/abb_irb1600_control/scripts/: gazebo_sac_control.py
section2.4 RL placing/abb/abb_irb1600_gazebo/: README.md  launch_robot.sh  package.xml
section2.4 RL placing/abb/abb_irb1600_gazebo/launch/: load_ros2_controllers.launch.py
section2.4 RL placing/abb/abb_irb1600_gazebo/urdf/: gazebo_sim_ros2_control.urdf.xacro
section2.4 RL placing/abb/abb_irb1600_support/launch/: robot_interface_download_irb1600_10_145.launch
section2.4 RL placing/abb/abb_irb1600_support/meshes/: static_reachability
section2.4 RL placing/abb/abb_irb1600_support/urdf/: irb1600_6_12.urdf  irb1600_6_12_macro.xacro
section2.4 RL placing/abb/abb_resources/: CMakeLists.txt  package.xml
section2.4 RL placing/abb/section2.4/: final_results_summary.py  launch_torque_compensation.launch.py  run_and_plot.py  setup_torque_compensation.sh  simple_robot_test.py  simple_tracking_test.py  spawn_robot_with_controllers.py  td3_torque_control.py  test_tracking.py
section2.4 RL placing/abb/src/abb/: simple_robot.launch.py
