<package format="3">
  <name>abb_irb1600_support</name>
  <version>1.3.1</version>
  <description>
    <p>
      ROS-Industrial support for the ABB IRB 1600 (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for ABB IRB 1600 manipulators. This package includes the 6kg 1.2m
      and the 8kg and 10kg 1.45m versions.
    </p>
    <p>
      Joint limits and max joint velocities are based on the information in
      <em>ABB Product specification - IRB 1600/1660ID</em>, document ID:
      <em>3HAC023604-001, Rev AQ</em>.
      All URDFs / XACROs are based on the default motion and joint velocity
      limits, unless noted otherwise (ie: no support for high speed joints,
      extended / limited motion ranges or other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author>Ahmed Abdelmawgoud (Southwest Research Institute)</author>
  <author>Austin Deric (Southwest Research Institute)</author>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong (Southwest Research Institute)</maintainer>
  <license>Apache2</license>

  <url type="website">http://wiki.ros.org/abb_irb1600_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/abb/issues</url>
  <url type="repository">https://github.com/ros-industrial/abb</url>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <exec_depend>abb_driver</exec_depend>
  <exec_depend>abb_resources</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
  </export>
</package>
