<?xml version="1.0"?>
<package format="3">
  <name>abb_resources</name>
  <version>1.3.1</version>
  <description>Shared URDF/Xacro resources for ABB manipulators</description>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
